--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,9 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Framework specific
+target
+pkg
+apps/*/dist
+packages/wasm-sim/pkg
